--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@
 title: Leo's Website
 email: cacate0129@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-    I am currently working as a post-doctor in IOP China, devoted to quantum machine learning.
+    I am currently a postdoc in Harvard
 
 baseurl: "" # the subpath of your site, e.g. /blog
 site.url: https://giggleliu.github.io
